@@ -96,12 +96,6 @@
           </tr>
 
           <tr>
-            <td>compiler attribute for rmic</td>
-            <td></td>
-            <td>Stefan, others welcome</td>
-          </tr>
-
-          <tr>
             <td>JUnit's System.err/.out handling</td>
             <td>Currently this is coupled to SummaryResultFormatter -
             no SummaryFormatter, no output.  Want to decouple it.</td>
@@ -138,6 +132,11 @@
             <td>update to release, add uptodateness, add a web service
             import (for Axis interop testing)</td>
             <td>Steve, in a really long meeting</td>
+          </tr>
+          <tr>
+            <td>compiler attribute for rmic</td>
+            <td></td>
+            <td>Stefan</td>
           </tr>
           <tr>
             <td>PGP signing task if possible</td>
